<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ver_nbr">2.0.0.0</string>
    <string name="ver_build">2017 - Jan 31</string>
    <string name="ver_author">weather.tunnel@coolftc.com</string>
    <string name="ver_copyright">© 2017 zalicon enterprises, inc.</string>
    <string name="ver_title">Weather Tunnel&#0174;</string>
    <string name="ver_desc">The Weather Tunnel&#0174; lets you discover weather at the places you care about.</string>
    <string name="ver_company">zalicon enterprises, inc.</string>
    <string name="ver_power">* powered by *</string>
    <string name="admob_pub">a14fc656f7b2d0d</string>
    <string name="admob_test_phone">7A9D5899CAE9B58B380A7DF06912796F</string>
    <string name="blank"></string>
    <string name="delimit_comma">, </string>
    <string name="app_name">Weather Tunnel&#0174;</string>
    <string name="lst_name">Slate</string>
    <string name="dtl_name">Details</string>
    <string name="cur_name">Current</string>
    <string name="for_name">Forecast</string>
    <string name="loc_name">Cities and Destinations</string>
    <string name="set_name">Settings</string>
    <string name="srv_name">Service</string>
    <string name="abt_name">About</string>
    <string name="fcd_name">Day\'s Forecast</string>
    <string name="wgt_name">Weather Tunnel&#0174;</string>
    <string name="qvl_name">Select Location</string>
    <string name="alr_name">Alerts</string>
    <string name="elu_name">Welcome to Weather Tunnel&#0174;</string>
    <string name="wug_name">Weather Underground</string>
    <string name="authoritySuggest">coolftc.android.weather.tunnel.suggestion</string>
    <string name="lblNoLocations">No Saved Locations</string>
    <string name="lblNoForecasts">Forecast of Future Weather</string>
    <string name="dlgPickAddr">Pick Addresses to Add</string>
    <string name="dlgDone">Done</string>
    <string name="msgFound">Requested location added to watch list.</string>
    <string name="msgNotFound">Requested item not found.</string>
    <string name="msgNoLocation">Current Location not available.</string>
    <string name="msgUserCancel">The request has been Canceled.</string>
    <string name="msgCityNotFound">Location not found. Try typing in fewer characters if looking for a city.</string>
    <string name="msgNotDelete">The current location cannot be deleted.</string>
    <string name="msgNoNet">Network Connection not found.</string>
    <string name="msgMaxSlate">Maximum number of locations reached.  Delete some and try to add again.</string>
    <string name="msgHowToSort">Hold and Drag temperature to move rows.</string>
    <string name="mnuSlateAddPlace">Add</string>
    <string name="mnuSlateCities">Add Places</string>
    <string name="mnuSlateContact">Add Friends</string>
    <string name="mnuSlateSort">Manual Sort</string>
    <string name="mnuSlateSettings">Settings &#8230;</string>
    <string name="mnuSlateRefresh">Refresh</string>
    <string name="mnuDetailAlert">Alerts</string>
    <string name="mnuDetailMap">Map</string>
    <string name="lblQuery">Add Location</string>
    <string name="AddLocation">Search</string>
    <string name="mnuSlateDetail">Detail</string>
    <string name="mnuSlateDelete">Delete</string>
    <string name="prfIntroduction">Weather Tunnel&#0174; Help</string>
    <string name="prfIntroductionSum">An introduction to using the Weather Tunnel&#0174;</string>
    <string name="preIntroductionLnk">http://www.coolftc.org/wtunnel/wt_app.html</string>
    <string name="prfAbout">Weather Tunnel&#0174; Info.</string>
    <string name="prfAboutSum">Information about the Weather Tunnel&#0174; App.</string>
    <string name="preAboutLnk">http://www.coolftc.org/wtunnel/wt_app.html</string>
    <string name="prfCheckLocation">Current Location</string>
    <string name="prfCheckLocationSum">Always try to find the Current Location.</string>
    <string name="prfUseGPSLocation">Use GPS for Location</string>
    <string name="prfUseGPSLocationSum">Provides improved Current Location. Uses more battery.</string>
    <string name="prfAirPortOnly">Airports Only</string>
    <string name="prfAirPortOnlySum">Use climate data only from Airport weather stations.</string>
    <string name="prfUseCelsius">Report in Celsius</string>
    <string name="prfUseCelsiusSum">When reporting temperature, show measurement in Celsius.</string>
    <string name="prfUseMetric">Report in Metric</string>
    <string name="prfUseMetricSum">When reporting distances or speed, show measurement in Metric form.</string>
    <string name="prfUse24Clock">Use 24 Hour Clock</string>
    <string name="prfUse24ClockSum">Display time values using a 24 Hour clock format (not AM-PM).</string>
    <string name="prfUseInches">Use Inches of Mercury</string>
    <string name="prfUseInchesSum">Report atmospheric pressure as equivalent to inches of mercury.</string>
    <string name="prfUseMeteorological">Use Meteorological Dates</string>
    <string name="prfUseMeteorologicalSum">Calculate Seasons with Meteorological instead of Astronomical dates.</string>
    <string name="prfPickDateFormat">Change Date Format</string>
    <string name="prfPickDateFormatSum">Choose the order of days, months and years in short displayed dates.</string>
    <string name="prfPickDateFormatDefault">MM/dd/yyyy</string>
    <string name="prfShowStations">Show Weather Stations</string>
    <string name="prfShowStationsSum">Show the names of weather stations used to build the current displayed data.</string>
    <string name="findCity">Enter City Name</string>  
    <string name="btnProgress">Show Progress</string>
    <string name="lblObserved">Observed</string>
    <string name="lblUntil">Until</string>
    <string name="lblAt">at</string>
    <string name="lblTempAvg">Average</string>
    <string name="lblGPSCoor">GPS -</string>
    <string name="lblVisibility">Visibility -</string>
    <string name="lblPressure">Pressure -</string>
    <string name="lblHumidity">Humidity -</string>
    <string name="lblTempAverages">Historic Avg. -</string>
    <string name="lblTempRecords">Record Temp. -</string>
    <string name="lblDewPoint">Dew Point -</string>
    <string name="lblUVindex">UV Index -</string>
    <string name="lblWind">Wind Speed -</string>
    <string name="lblWindDir">Direction -</string>
    <string name="lblRain">Precipitation -</string>
    <string name="lblStationDist">Weather Station Distance</string>
    <string name="lblPrivateDist">Private Station:</string>
    <string name="lblPublicDist">Public Station:</string>
    <string name="lblElevation">Elevation:</string>
    <string name="lblLocalTime">Locally</string>
    <string name="lblLocalTimeNextDay">(next day)</string>
    <string name="lblLocalTimePastDay">(past day)</string>
    <string name="lblForecastTitle">Forecast</string>
    <string name="lblForecastHigh">high</string>
    <string name="lblForecastHighSm"></string>
    <string name="lblForecastLow">low</string>
    <string name="lblForecastLowSm">/</string>
    <string name="lblForecastRain">rain</string>
    <string name="lblForecastSnow">snow</string>
    <string name="lblSunrise">Sunrise</string>
    <string name="lblSunset">Sunset</string>
    <string name="eluAccept"> - OK - </string>
    <string name="eluWUndergroundAgr"><a href="http://www.wunderground.com/weather/api/d/terms.html">Weather Underground User Agreement</a></string>
    <string name="eluWTunnelAgr"><a href="http://www.coolftc.org/wtunnel/wt_eula.html">Weather Tunnel&#0174; User Agreement</a></string>
    <string name="eluHaveRead">I have reviewed and accept the user agreement listed above.</string>
    <string name="eluDescription">Weather for all your favorite places.\n\n\tWorld Wide Climate Coverage\n\tDetailed Current Conditions\n\t10-day Forecasts\n\tAdd Contacts and 1000\'s of Cities\n\tAlerts for US &amp; Europe\n\nPlease review the license agreement.</string>
    <string name="img_condition">Condition</string>
    <string name="img_moonphase">Moon Phase</string>
    <string name="img_todaycond">Condition Today</string>
    <string name="img_tonightcond">Condition Tonight</string>
    <string name="img_delimithoz">Horizontal Delimiter</string>
    <string name="img_sunrise">Sunrise</string>
    <string name="img_sunset">Sunset</string>
    <string name="img_warning">Warning Sign</string>
    <string name="img_back">Back</string>
    <string name="img_next">Next</string>
    <string name="img_move">Drag and Drop</string>
</resources>
