<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/rowfItem"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:onClick="showVerboseOnClick"
  android:padding="10sp">
  <TextView android:id="@+id/rowf_Id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"> 
  </TextView>
  <ImageView android:id="@+id/rowfCondImg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/img_condition" 
    android:paddingRight="5dp"
    android:layout_alignParentTop="true"
    android:layout_marginRight="6dp" 
    android:layout_toRightOf="@+id/rowf_Id">
  </ImageView>
  <TextView android:id="@+id/rowfTitleDay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:textStyle="italic"
    android:layout_toRightOf="@+id/rowfCondImg">
  </TextView>
  <TextView android:id="@+id/rowfDescDay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:layout_marginLeft="5dp"
    android:visibility="gone"
    android:layout_alignLeft="@+id/rowfTitleDay"
    android:layout_below="@+id/rowfTitleDay">
  </TextView>
  <ImageView android:id="@+id/rowfDelimit" style="@style/HorzBarDelimit"
    android:layout_marginLeft="5dp"
    android:layout_alignLeft="@+id/rowfTitleDay"
    android:layout_below="@+id/rowfTitleDay">
  </ImageView>
  <TextView android:id="@+id/rowfCondition"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:layout_marginLeft="5dp"
    android:layout_alignLeft="@+id/rowfTitleDay"
    android:layout_below="@+id/rowfDelimit">
  </TextView>
  <TextView android:id="@+id/rowfWindCond"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:layout_marginLeft="5dp"
    android:layout_alignLeft="@+id/rowfTitleDay"
    android:layout_below="@+id/rowfCondition">
  </TextView>
  <TextView android:id="@+id/lblfRainChance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:layout_marginLeft="5dp"
    android:visibility="gone"
    android:layout_alignLeft="@+id/rowfTitleDay"
    android:layout_below="@+id/rowfWindCond">
  </TextView>
  <TextView android:id="@+id/rowfRainChance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:visibility="gone"
    android:layout_toRightOf="@+id/lblfRainChance"
    android:layout_below="@+id/rowfWindCond">
  </TextView>
  <TextView android:id="@+id/rowfLowTemp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/YellowBrick"
    android:textSize="18sp"
    android:layout_marginLeft="7dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true">
  </TextView>  
  <TextView android:id="@+id/lblfLowTemp" android:text="@string/lblForecastLowSm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:paddingLeft="3dp"
    android:layout_marginBottom="2dp"
    android:layout_toLeftOf="@+id/rowfLowTemp"
    android:layout_alignBottom="@+id/rowfLowTemp">
  </TextView>
  <TextView android:id="@+id/rowfHighTemp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/YellowBrick"
    android:textSize="18sp"
    android:layout_toLeftOf="@+id/lblfLowTemp"
    android:layout_alignParentTop="true">
  </TextView>
  <TextView android:id="@+id/lblfHighTemp" android:text="@string/lblForecastHighSm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:paddingRight="3dp"
    android:layout_marginBottom="2dp"
    android:layout_toLeftOf="@+id/rowfHighTemp"
    android:layout_alignBottom="@+id/rowfHighTemp">
  </TextView>
</RelativeLayout>